--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "upload csv files and get data",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js --ignore client",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "concurrently": "^4.1.1",
     "csv-parser": "^2.3.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
